[package]
name = "nannou_sketch"
version = "0.1.0"
authors = ["Chikashi Miyama <chikashimiyama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.10"
rand = "0.7.0"

[[example]]
name = "points"
path = "examples/points/main.rs"

[[example]]
name = "lines"
path = "examples/lines/main.rs"
